plang/testing/logs/false-incorrect/161/program161.p.p
p3 U C uhS :- (nvhhM kkb ZWr csa (ujeD (tNGS A9 (g2 (K3) A2FI Je (xUsg AQO (zoZ4c gqtjD xEs6 fu))) (DNh)) (WLsgh))).
b :- spP (mor NtLw) (LYQFn) IJ7x J7U.

oaeHL s2dRM (A4kW).

l0 A3 QmO iE2.


dRzi B (oNy z (BSw)) (zS (mGS P YA (WVxsU))) sksV :- eLg6.


vjA (Sp5B) (DH) (HnT) (PU9si) :- ((itx (ftdR8 gC (W) O v7C) wVJC (LBp) RHaEF; (tZN (N)))).


atbE2 :- ((p7m (b KRr p (V7CBG))), mr lsJMi (Z15) (z (lYYE (BydAK) Oj4L wzYe) W16ZF), atz4 (T) cl3 (YK); ebGI (d (EYSaW) (WSpn) (Y1D1r)), lsQm9 sA gJ SKDT4 Y9ZpW, ir); wy1N d.
mzq G NPw jn (uC (CmAt)).
iHn5 (Um) (xkQW XZyI Y0wQ8 (GIcF) (iG znVgh)).


ix yZG (kNt nb9lY (Dl) (yf (dGn fV (x4wXi (hho Y QXXlY UHFk)) i (qnqd y (kxg) (O))) (p) Kx7) (eT fb7Zr (N4) (mLG (FLPQ) (j (C) (T) (sIOVS)) (vp2VV F (rUpQi (mf ubA O M8ZX) (LHw0) (C)) LhKd (Nv))) OP)) (W2W4B).


crLT.


lFNo (GVXcC) (PgO8) (M) (wmL FK2sV (LgaG) PeC1h) :- hVe (yOU (UGg) p1w (Bir) QX9h).


? (obk a2f (Z)), muWwL (Qtr), rqO (sfYpw (QE) u t2a (AX18p)) QjyL pl77; tXoQ TQ (VuI); gI MVm Zpt, n91 uApE (OD) vjv; pGaSz ph; n52 (xJ aB AOBR3 fQwQP (bB lN ZRurG)), ((k oZs, eulD (v (cNl Z4428 (WB))))).



